<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addmeeting.AddMeetingFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:fitsSystemWindows="true">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:startIconDrawable="@drawable/baseline_subject_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_meeting_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/meeting_name_res"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".AddMeetingFragment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:startIconDrawable="@drawable/ic_calendar_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_date_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date"
                        android:textSize="18sp"
                        android:tag="datePicker"/>
                </com.google.android.material.textfield.TextInputLayout>
                <RelativeLayout
                    android:id="@+id/room_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date_input_layout">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/add_meeting_til_room"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/room"
                        app:startIconDrawable="@drawable/ic_meeting_room_24">
                        <AutoCompleteTextView
                            android:id="@+id/select_room_autocomplete_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/room"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/email_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/add_meeting_til_room" />
                    <Button
                        android:id="@+id/add_save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_below="@id/email_recyclerview"
                        android:text="@string/save"/>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>