<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@drawable/ic_email_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/sym_action_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>
    <ImageButton
        android:id="@+id/addEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@null"
        android:contentDescription="@string/add"
        android:layout_toRightOf="@+id/email_input_layout"
        android:layout_alignBottom="@+id/email_input_layout"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/ic_add_circle_24"
        android:clickable="false"
        android:layout_toStartOf="@id/email_input_layout"/>
</RelativeLayout>