<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter_by_date"
        android:icon="@drawable/ic_calendar_24"
        android:title="@string/by_date"
        android:contentDescription="@string/Filter_by_date"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_filter_by_room"
        android:icon="@drawable/ic_meeting_room_24"
        android:title="@string/by_room"
        android:contentDescription="@string/filter_by_room"
        app:showAsAction="ifRoom"
        />

</menu>